--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
 @import "https://fonts.googleapis.com/css?family=Reenie+Beanie";
 
+html,
+body,
+#root {
+  height: 100%;
+}
 body {
   margin: 0;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, ".SFNSText-Regular",
